--- a/main.css
+++ b/main.css
@@ -27,46 +27,49 @@ a {
     height: 100vh;
 }
 
-
 body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: relative; 
+    height: 100vh;
     font-family: "Audiowide", sans-serif;
-    background-image: url(/img/fon.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-size: 100vw cover;
-    /* animation: zoomin 20s ease-in-out infinite;
-    animation-fill-mode: forwards; */
-
 }
 
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url(/img/fon.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: -1;
+    animation: backgroundGrow 30s infinite ease-in-out;
+}
 
-/* @keyframes zoomin {
-    0%, 100% {
-      background-size: 100%;
+@keyframes backgroundGrow {
+    0%, 100%{
+        transform: scale(1);
     }
     50% {
-      background-size: 120%;
+        transform: scale(1.25);
     }
-  } 
-  */
+}
 
 .section__icon {
     text-align: center;
-    /* margin-top: 120px; */
-    /* flex: 25%; */
-
 }
 
 .title {
-    /* flex: 50%; */
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 100px;
     color: #fff;
     text-align: center;
-    /* margin-top: 201px; */
-    /* margin-bottom: 259px; */
 }
 
 @media screen and (max-width:1200px) {
@@ -77,9 +80,7 @@ body {
         color: #fff;
         text-align: center;
     }
-
 }
-
 
 @media screen and (max-width:768px) {
     .title {
@@ -87,8 +88,10 @@ body {
         margin-left: auto;
         margin-right: auto;
     }
+    .section__icon img{
+        width: 150px;
+    }
 }
-
 
 @media screen and (max-width:500px) {
     .title {
@@ -100,6 +103,9 @@ body {
         width: 350px;
         margin-left: auto;
         margin-right: auto;
+    }
+    .section__icon img{
+        width: 130px;
     }
 }
 
@@ -113,6 +119,9 @@ body {
         width: 280px;
         margin-left: auto;
         margin-right: auto;
+    }
+    .section__icon img{
+        width: 100px;
     }
 }
 
@@ -131,14 +140,10 @@ body {
     }
 }
 
-
 @media screen and (max-width:375px) {
-    .section__list{
+    .section__list {
         gap: 25px;
     }
-}
-.section-footer {
-    /* flex: 25%; */
 }
 
 .text {
@@ -149,18 +154,12 @@ body {
     line-height: 132%;
     letter-spacing: 0.07em;
     color: #7a7a7a;
- 
-
 }
 
-@media screen  and (max-width:375px) {
+@media screen and (max-width:375px) {
     .text {
-      
         font-weight: 400;
         font-size: 14px;
-      
-  
-    
     }
 }
 
@@ -169,31 +168,27 @@ body {
     height: 90px;
     background-image: url(/img/Ellipse\ 1.svg);
     background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     justify-items: center;
-    padding: 20px;
     border-radius: 100%;
 }
-
-
 
 @media screen and (max-width:768px) {
     .section__item {
         width: 70px;
         height: 70px;
-        padding: 12px;
-        
-
+    }
+    .section__item a{
+        padding: 15px !important;
     }
 }
 
 @media screen and (max-width:375px) {
-    .section__item{
+    .section__item {
         width: 60px;
         height: 60px;
-        padding: 12px;
-       
     }
 }
 
@@ -202,7 +197,13 @@ body {
     height: 100%;
 }
 
-.section__list a:hover {
+.section__item a{
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+.section__item:hover {
     transform: scale(1.06);
 }
 
@@ -213,10 +214,8 @@ body {
 
 .section__item:hover:nth-child(2) {
     background: linear-gradient(136deg, #9809f6 0%, rgba(252, 1, 200, 0.7) 27.5%, rgba(254, 72, 25, 0.5) 57%, rgba(255, 195, 0, 0.3) 80%, rgba(255, 195, 0, 0) 100%);
-
 }
 
 .section__item:hover:nth-child(3) {
     background: linear-gradient(136deg, #1769ff 0%, rgba(23, 105, 255, 0) 100%);
-
 }
